[package]
name = "lg-ultrafine-rs"
version = "0.1.0"
authors = ["Jerome Gravel-Niquet <jeromegn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.5.5"
clap = "2.33.0"
log = "0.4.8"
env_logger = "0.7.1"
